<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/ancestor_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewRealMadrid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/real_madrid"
                    android:textColor="#616161"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:gravity="center"
                    android:text="@string/budget_of_team"
                    android:textColor="#616161"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewBudgetRealM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/thousand"
                    android:textColor="#000000"
                    android:textSize="54sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:gravity="center"
                    android:text="@string/number_of_players"
                    android:textColor="#616161"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewPlayersRealM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/_32"
                    android:textColor="#000000"
                    android:textSize="54sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:gravity="center"
                    android:text="@string/sum_amount_of_salaries"
                    android:textColor="#616161"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewamountOfSalaryRealM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/_640"
                    android:textColor="#000000"
                    android:textSize="54sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:gravity="center"
                    android:text="@string/time_left_to_pay_salaries"
                    android:textColor="#616161"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewMonthsRealM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/_12"
                    android:textColor="#000000"
                    android:textSize="54sp" />


                <Button
                    android:id="@+id/buttonBuyRealM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="buyRealM"
                    android:text="@string/buy_player" />

                <Button
                    android:id="@+id/buttonSellRealM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="sellRealM"
                    android:text="@string/sell_player" />

                <Button
                    android:id="@+id/buttonLoanInRealM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="loanInRealM"
                    android:text="@string/loan_in" />

                <Button
                    android:id="@+id/buttonLoanOutFromMadrid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="loanOutRealM"
                    android:text="@string/loan_out" />

                <Button
                    android:id="@+id/buttonPaySalariesRealM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:onClick="salariesRealM"
                    android:text="@string/pay_salaries" />


            </LinearLayout>


            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewBarcelona"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/barcelona"
                    android:textColor="#616161"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:gravity="center"
                    android:text="@string/budget_of_team"
                    android:textColor="#616161"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewBudgetBarca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/thousand"
                    android:textColor="#000000"
                    android:textSize="54sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:gravity="center"
                    android:text="@string/number_of_players"
                    android:textColor="#616161"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewPlayersBarca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/_32"
                    android:textColor="#000000"
                    android:textSize="54sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:gravity="center"
                    android:text="@string/sum_amount_of_salaries"
                    android:textColor="#616161"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewamountOfSalaryBarca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/_640"
                    android:textColor="#000000"
                    android:textSize="54sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:gravity="center"
                    android:text="@string/time_left_to_pay_salaries"
                    android:textColor="#616161"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewMonthsBarca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/_12"
                    android:textColor="#000000"
                    android:textSize="54sp" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="buyBarca"
                    android:text="@string/buy_player" />

                <Button
                    android:id="@+id/buttonSellBarca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="sellBarca"
                    android:text="@string/sell_player" />

                <Button
                    android:id="@+id/buttonLoanBarca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="loanInBarca"
                    android:text="@string/loan_in" />

                <Button
                    android:id="@+id/buttonLoanOutFromBarca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="loanOutBarca"
                    android:text="@string/loan_out" />

                <Button
                    android:id="@+id/buttonSalaryBarca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:onClick="salariesBarca"
                    android:text="@string/pay_salaries" />

            </LinearLayout>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:onClick="reset"
                android:text="@string/reset" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>